[package]
name = "rp-pico2w-examples-wprobe"
version = "0.1.0"
edition = "2021"
authors = ["David Haig <david@ninjametal.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ninjasource/rp-pico2w-examples-wprobe.git"
description = "Raspberry Pi Pico2 W examples using a debug probe"

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.8.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
    "defmt",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "defmt",
] }
embassy-futures = { version = "0.1.2" }

cyw43 = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.8.0", features = ["defmt"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
heapless = "0.8.0"
static_cell = "2.1.1"
rand = { version = "0.9.2", default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
